# CMakeLearning

./: README.md  gitpush.sh
01part/01CMakeLib/: CMakeLists.txt
01part/02IfelseOption/: readme.md
01part/03setCompiler/: CMakeLists.txt
01part/04buildType/: CMakeLists.txt  readme.md
01part/05setCompilerOpt/: CMakeLists.txt
02part/: README.md
02part/01checkSys/: CMakeLists.txt
02part/02RelateSys/: CMakeLists.txt  helloworld.cpp
02part/03RelateCompiler/: CMakeLists.txt  HelloWorld.cpp
02part/04RelateProcesser/: CMakeLists.txt  arch_dependent.cpp
02part/05RelateCPUISC/: CMakeLists.txt  config.h.in  processor_info.cpp
02part/06VecForEigen/: CMakeLists.txt  linear-algebra.cpp
03findPackage/: readme.md
03findPackage/00findPythonInterp/: CMakeLists.txt
03findPackage/01findPython/: CMakeLists.txt  hello-embedded-python.c
03findPackage/02findPythonModule/: CMakeLists.txt  Py3_pure_embedding.cpp  use_numpy.py
03findPackage/03findBLAS/: CMakeLists.txt  CxxBLAS.cpp  CxxBLAS.hpp  CxxLAPACK.cpp  CxxLAPACK.hpp  linear_algebra.cpp
03findPackage/04findOpenMP/: CMakeLists.txt  example.cpp
03findPackage/05findMPI/: CMakeLists.txt  hello-mpi.cpp
03findPackage/06findEigen/: CMakeLists.txt  linear-algenbra.cpp
03findPackage/07findBoost/: CMakeLists.txt  path-info.cpp
03findPackage/08checkLib/: CMakeLists.txt  hwclient.cpp
03findPackage/09DIYfind/: CMakeLists.txt  FindZeroMQ.cmake
04Test/: readme.md
04Test/00DIYTest/: CMakeLists.txt  test.cpp  test.py
04Test/01Catch2Test/: CMakeLists.txt  sum_integers.cpp  test.cpp
04Test/02Gtest/: CMakeLists.txt  test.cpp
04Test/03BoostTest/: CMakeLists.txt  test.cpp
04Test/04MemLeakDetect/: CMakeLists.txt  leaky_implementation.cpp  leaky_implementation.hpp  test.cpp
04Test/05ExpectFail/: CMakeLists.txt  test.py
04Test/06timeOutTest/: CMakeLists.txt  test.py
04Test/07parallelTest/: CMakeLists.txt  testF.py
04Test/08subTest/: CMakeLists.txt  testA.py  testC.py  testH.py  testI.py  testJ.py
04Test/09testFixture/: CMakeLists.txt
04Test/09testFixture/test/: cleanup.py  feature-a.py  feature-b.py  setup.py
05ComandOperate/: readme.md
05ComandOperate/00fileOP/: CMakeLists.txt
05ComandOperate/00fileOP/src/: linear-algebra.cpp
05ComandOperate/01subCommand/: CMakeLists.txt
05ComandOperate/02AddCustomCommand/: CMakeLists.txt
05ComandOperate/03AddCustomTarget/: CMakeLists.txt
05ComandOperate/04AddCustomCommandWithNoOutput/: CMakeLists.txt
05ComandOperate/04AddCustomCommandWithNoOutput/src/: echo_file.py  example.f90  static_size.py
05ComandOperate/05CompileAndLink/: CMakeLists.txt
05ComandOperate/06CheckCompilerFlags/: CMakeLists.txt
05ComandOperate/07ExecutableCommand/: CMakeLists.txt
05ComandOperate/08GeneratorExpression/: CMakeLists.txt
05ComandOperate/08GeneratorExpression/src/: example.cpp
06BuildSource/: README.md
06BuildSource/00BuildSourceWhenConfig/: CMakeLists.txt
06BuildSource/00BuildSourceWhenConfig/src/: example.f90
06BuildSource/01BuildSourceWithPython/: CMakeLists.txt
06BuildSource/01BuildSourceWithPython/pyScript/: Configuration.py
06BuildSource/01BuildSourceWithPython/src/: print_info.c.in
06BuildSource/02BuildSourceWhenBuild/: CMakeLists.txt
06BuildSource/02BuildSourceWhenBuild/src/: example.cpp  generate.py
06BuildSource/03GetVersionInfo/: CMakeLists.txt
06BuildSource/03GetVersionInfo/src/: example.c  version.h.in
06BuildSource/04WriteVersion2File/: CMakeLists.txt
06BuildSource/04WriteVersion2File/src/: example.cpp  version.hpp.in
06BuildSource/05RecordGitHash/: CMakeLists.txt
06BuildSource/05RecordGitHash/src/: example.cpp
06BuildSource/06RecorGitHashWhenBuild/: CMakeLists.txt
06BuildSource/06RecorGitHashWhenBuild/src/: example.cpp  git_hash.cmake  version.hpp.in
07BuildTarget/: README.md
07BuildTarget/00FuncAndMacroCode/: CMakeLists.txt
07BuildTarget/00FuncAndMacroCode/tests/: CMakeLists.txt
07BuildTarget/01CmakeChunks/: CMakeLists.txt
07BuildTarget/01CmakeChunks/cmake/: colors.cmake
07BuildTarget/02Function/: CMakeLists.txt
07BuildTarget/02Function/cmake/: set_compiler_flag.cmake
07BuildTarget/03FuncWithArgs/: CMakeLists.txt
07BuildTarget/03FuncWithArgs/cmake/: testing.cmake
07BuildTarget/03FuncWithArgs/src/: CMakeLists.txt  main.cpp
07BuildTarget/03FuncWithArgs/tests/: CMakeLists.txt
07BuildTarget/04RedefFunc/: CMakeLists.txt
07BuildTarget/04RedefFunc/cmake/: custom.cmake  include_guard.cmake
07BuildTarget/05UseDeprecatedfunc/: CMakeLists.txt
07BuildTarget/05UseDeprecatedfunc/cmake/: include_guard.cmake
07BuildTarget/06addSubDirectory/tests/: CMakeLists.txt
07BuildTarget/07TargetSource/: CMakeLists.txt
07BuildTarget/07TargetSource/src/: CMakeLists.txt
07BuildTarget/07TargetSource/tests/: test.cpp
08SuperBuild/: README.md
08SuperBuild/00SuperBuild/: CMakeLists.txt
08SuperBuild/00SuperBuild/src/: CMakeLists.txt  hello_world.cpp
08SuperBuild/01SuperBuildBOOST/: CMakeLists.txt
08SuperBuild/01SuperBuildBOOST/src/: CMakeLists.txt  path-info.cpp
08SuperBuild/02SuperBuildFFTW/: CMakeLists.txt
08SuperBuild/02SuperBuildFFTW/src/: CMakeLists.txt
08SuperBuild/03SuperBuildGtest/: CMakeLists.txt
08SuperBuild/03SuperBuildGtest/src/: CMakeLists.txt  sum_integers.hpp
08SuperBuild/04UseSuperBuild/: CMakeLists.txt
09LanguageMixed/: README.md
09LanguageMixed/00CXXBuildFortran/: CMakeLists.txt
09LanguageMixed/01FortranBuildCXX/: CMakeLists.txt
09LanguageMixed/02CythonBuild/: CMakeLists.txt  account.hpp  account.pyx
09LanguageMixed/03BoostBuildCxxAndPython/: CMakeLists.txt  account.hpp  test.py
09LanguageMixed/04Pybind11BuildCxxAndPython/: CMakeLists.txt
09LanguageMixed/05BuildPYTHON_CFFI/: CMakeLists.txt
10Install/: readme.md
10Install/00InstallProject/: CMakeLists.txt
10Install/01InstallExport/: CMakeLists.txt
10Install/02OutPut/: CMakeLists.txt
part01/CMakeLib01/: CMakeLists.txt  readme.md
part01/IfelseOption02/: CMakeLists.txt
part01/SingleSrc00/: CMakeLists.txt  readme.md
part01/lang_standard06/: CMakeLists.txt
part01/setCompiler03/: information.txt  readme.md
(+32 files in other folders)
